--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.2",
-    "sequelize": "^6.37.3"
+    "pug": "^3.0.3",
+    "sequelize": "^6.37.3",
+    "uglify-js": "^3.19.0"
   }
 }
